--- a/index.ipynb
+++ b/index.ipynb
@@ -39,9 +39,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pandas in /opt/conda/envs/learn-env/lib/python3.6/site-packages (0.23.4)\n",
+      "Requirement already satisfied: python-dateutil>=2.5.0 in /opt/conda/envs/learn-env/lib/python3.6/site-packages (from pandas) (2.8.0)\n",
+      "Requirement already satisfied: pytz>=2011k in /opt/conda/envs/learn-env/lib/python3.6/site-packages (from pandas) (2018.5)\n",
+      "Requirement already satisfied: numpy>=1.9.0 in /opt/conda/envs/learn-env/lib/python3.6/site-packages (from pandas) (1.16.3)\n",
+      "Requirement already satisfied: six>=1.5 in /opt/conda/envs/learn-env/lib/python3.6/site-packages (from python-dateutil>=2.5.0->pandas) (1.11.0)\n",
+      "\u001b[33mYou are using pip version 10.0.1, however version 19.2.3 is available.\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n",
+      "Requirement already satisfied: xlrd in /opt/conda/envs/learn-env/lib/python3.6/site-packages (1.1.0)\n",
+      "\u001b[33mYou are using pip version 10.0.1, however version 19.2.3 is available.\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install pandas\n",
     "!pip install xlrd"
@@ -49,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,9 +85,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'City': 'Buenos Aires',\n",
+       "  'Country': 'Argentina',\n",
+       "  'Population': 2891000,\n",
+       "  'Area': 4758},\n",
+       " {'City': 'Toronto',\n",
+       "  'Country': 'Canada',\n",
+       "  'Population': 2800000,\n",
+       "  'Area': 2731571},\n",
+       " {'City': 'Pyeongchang',\n",
+       "  'Country': 'South Korea',\n",
+       "  'Population': 2581000,\n",
+       "  'Area': 3194},\n",
+       " {'City': 'Marakesh', 'Country': 'Morocco', 'Population': 928850, 'Area': 200},\n",
+       " {'City': 'Albuquerque',\n",
+       "  'Country': 'New Mexico',\n",
+       "  'Population': 559277,\n",
+       "  'Area': 491},\n",
+       " {'City': 'Los Cabos',\n",
+       "  'Country': 'Mexico',\n",
+       "  'Population': 287651,\n",
+       "  'Area': 3750},\n",
+       " {'City': 'Greenville', 'Country': 'USA', 'Population': 84554, 'Area': 68},\n",
+       " {'City': 'Archipelago Sea',\n",
+       "  'Country': 'Finland',\n",
+       "  'Population': 60000,\n",
+       "  'Area': 8300},\n",
+       " {'City': 'Walla Walla Valley',\n",
+       "  'Country': 'USA',\n",
+       "  'Population': 32237,\n",
+       "  'Area': 33},\n",
+       " {'City': 'Salina Island', 'Country': 'Italy', 'Population': 4000, 'Area': 27},\n",
+       " {'City': 'Solta', 'Country': 'Croatia', 'Population': 1700, 'Area': 59},\n",
+       " {'City': 'Iguazu Falls',\n",
+       "  'Country': 'Argentina',\n",
+       "  'Population': 0,\n",
+       "  'Area': 672}]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cities"
    ]
@@ -98,9 +161,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import plotly\n",
     "\n",
@@ -119,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,9 +227,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "type": "scatter",
+         "uid": "deb72a54-d0c0-11e9-a143-830bcfa0f8f4",
+         "x": [
+          "Buenos Aires",
+          "Toronto",
+          "Pyeongchang"
+         ],
+         "y": [
+          2891000,
+          2800000,
+          2581000
+         ]
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"22e903d8-9c8d-401e-bcb6-60cb0856751c\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"22e903d8-9c8d-401e-bcb6-60cb0856751c\", [{\"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"type\": \"scatter\", \"uid\": \"debc9106-d0c0-11e9-a143-830bcfa0f8f4\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"22e903d8-9c8d-401e-bcb6-60cb0856751c\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"22e903d8-9c8d-401e-bcb6-60cb0856751c\", [{\"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"type\": \"scatter\", \"uid\": \"debc9106-d0c0-11e9-a143-830bcfa0f8f4\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "trace_first_three_pops = {'x': x_values, 'y': y_values}\n",
     "\n",
@@ -176,6 +284,7 @@
     "\n",
     "We can designate these corresponding city names in our trace dictionary by assigning a list of strings to the `text` key:\n",
     "\n",
+    "\n",
     "```python\n",
     "example_trace = {'type': 'bar', 'x': x_values, 'y': y_values, 'text': [\"label_1\", \"label_2\", \"label_3\"]}\n",
     "```\n",
@@ -185,28 +294,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "text_values = []\n",
-    "bar_trace_first_three_pops = {'type': 'scatter', 'text': text_values}"
+    "text_values = ['Elham', 'Barham', 'Bridge']\n",
+    "bar_trace_first_three_pops = {'type': 'bar', 'x': x_values, 'y': y_values,'text': text_values}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 33,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'bar'"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "bar_trace_first_three_pops['type'] # 'bar'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "text": [
+          "Elham",
+          "Barham",
+          "Bridge"
+         ],
+         "type": "bar",
+         "uid": "2f64576a-d0c1-11e9-a143-830bcfa0f8f4",
+         "x": [
+          "Buenos Aires",
+          "Toronto",
+          "Pyeongchang"
+         ],
+         "y": [
+          2891000,
+          2800000,
+          2581000
+         ]
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"33cc2f0a-2d26-4e8b-aa47-ed5461a3651e\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"33cc2f0a-2d26-4e8b-aa47-ed5461a3651e\", [{\"text\": [\"Elham\", \"Barham\", \"Bridge\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"type\": \"bar\", \"uid\": \"2f6925b0-d0c1-11e9-a143-830bcfa0f8f4\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"33cc2f0a-2d26-4e8b-aa47-ed5461a3651e\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"33cc2f0a-2d26-4e8b-aa47-ed5461a3651e\", [{\"text\": [\"Elham\", \"Barham\", \"Bridge\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"type\": \"bar\", \"uid\": \"2f6925b0-d0c1-11e9-a143-830bcfa0f8f4\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "plotly.offline.iplot([bar_trace_first_three_pops])"
    ]
@@ -227,21 +386,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
-    "bar_trace_first_three_areas = {'type': 'scatter', 'x': [], 'y': [], 'text': []}\n",
-    "bar_trace_first_three_pops = {'type': 'scatter', 'x': [], 'y': [], 'text': []}"
+    "a= {'type':'bar','x':[1],'y':[2],'text':'chartname',}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "text": "chartname",
+         "type": "bar",
+         "uid": "7f618632-d0c3-11e9-a143-830bcfa0f8f4",
+         "x": [
+          1
+         ],
+         "y": [
+          2
+         ]
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"f4e8caec-5d82-403b-a961-ca6ddc860d37\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"f4e8caec-5d82-403b-a961-ca6ddc860d37\", [{\"text\": \"chartname\", \"x\": [1], \"y\": [2], \"type\": \"bar\", \"uid\": \"7f6f62de-d0c3-11e9-a143-830bcfa0f8f4\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"f4e8caec-5d82-403b-a961-ca6ddc860d37\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"f4e8caec-5d82-403b-a961-ca6ddc860d37\", [{\"text\": \"chartname\", \"x\": [1], \"y\": [2], \"type\": \"bar\", \"uid\": \"7f6f62de-d0c3-11e9-a143-830bcfa0f8f4\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "plotly.offline.iplot([bar_trace_first_three_pops, bar_trace_first_three_areas])"
+    "plotly.offline.iplot([a])"
    ]
   },
   {
@@ -290,7 +477,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
